--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -12,3 +12,13 @@ body {
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
+#conversation {
+	height: 70vh;
+	overflow: auto;
+  max-height: 70vh;
+	border: 1px solid #e5e5e5;
+	-webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
