--- a/chat-app/src/main/resources/static/main.css
+++ b/chat-app/src/main/resources/static/main.css
@@ -14,11 +14,22 @@ body {
 }
 
 #conversation {
-	height: 70vh;
+	height: 80vh;
 	overflow: auto;
-  max-height: 70vh;
+  max-height: 80vh;
 	border: 1px solid #e5e5e5;
 	-webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
+
+#users {
+  height: 85vh;
+  overflow: auto;
+  max-height: 85vh;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
